# football-alerts-api

./: .env.example  .gitignore  .railwayignore  HOSTING.md  NEXT_STEPS.md  RAILWAY_DEPLOY.md  README.md  SETUP.md  check_railway_ready.sh  check_status.sh  get_telegram_chat_id.py  keep_awake.sh  pyproject.toml  railway.toml  requirements.txt
app/: __init__.py  main.py
app/api/: __init__.py
app/api/routes/: __init__.py  admin.py  items.py
app/core/: config.py
app/database/: __init__.py
app/models/: __init__.py  league.py  match.py  notification.py  team.py
app/scheduler/: __init__.py  jobs.py
app/schemas/: item.py
app/services/: __init__.py  api_football.py  monitor_service.py  telegram_service.py  the_odds_api_service.py
tests/: test_items.py
